Don't decode an HTML response.  Dump headers more accurately.